--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "Genie Blog",
     "author": "Genie <ext.cheng.sun@ef.com>",
     "version": "1.7.0",
-    "homepage": "https://gensun.github.io,
+    "homepage": "http://www.floatingraft.com,
     "repository": {
         "type": "git",
         "url": "https://github.com/Gensun/Gensun.github.io"
