--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: ext.cheng.sun@ef.com
 description: "个人博客 LIFE YOU LIFT"
 keyword: "孙程, 孙程同学, Genie, Genie blog, 孙程 Blog, 博客, 个人网站, 互联网, iOS, swift"
 # url: "https://github.com/Gensun/Gensun.github.io.git"              # your host, for absolute URL
-url: "http://www.floatingraft.com"
+url: "http://floatingraft.com"
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
