--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Genie Blog
-SEOTitle: 孙程的博客 | Genie Blog
+SEOTitle: 孙程的博客 | Genie's Blog
 header-img: img/home-bg.jpg
 email: ext.cheng.sun@ef.com
 description: "个人博客 LIFE YOU LIFT"
@@ -78,7 +78,7 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Life for Life"
+sidebar-about-description: "Life for Life<br>A iOS Develop Engineer"
 sidebar-avatar: /img/avatar-hux-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
