--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Genie Blog
 SEOTitle: 孙程的博客 | Genie's Blog
 header-img: img/home-bg.jpg
 email: ext.cheng.sun@ef.com
-description: "个人博客 LIFE YOU LIFT"
+description: "个人博客 LIFE YOU LIFE"
 keyword: "孙程, 孙程同学, Genie, Genie blog, 孙程 Blog, 博客, 个人网站, 互联网, iOS, swift"
 # url: "https://github.com/Gensun/Gensun.github.io.git"              # your host, for absolute URL
 url: "http://floatingraft.com"
