--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: geniesun
+disqus_username: Genie Sun
 
 # Netease settings
 netease_comment: false
