--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 future: true
 
 # SNS settings
-RSS: true
+# RSS: true
 weibo_username: _孙程同学
 # zhihu_username:     huxpro
 github_username: Gensun
@@ -60,8 +60,8 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: geniesun
-
+# disqus_username: geniesun
+disqusShortname = 'geniesun'
 # Netease settings
 netease_comment: false
 
