--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: Genie sun
+disqus_username: https-www-floatingraft-com-2
 
 # Netease settings
 netease_comment: false
