--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "Genie-blog",
     "title": "Genie Blog",
-    "author": "Genie <ext.cheng.sun@ef.com>",
+    "author": "Genie <ep_chengsun@aliyun.com>",
     "version": "1.0.0",
     "homepage": "https://gensun.github.io,
     "repository": {
