--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Genie Blog
-SEOTitle: 孙程的博客 | Genie's Blog
+title: Julian Home
+SEOTitle: 孙程的博客 | Julian Blog
 header-img: img/home-bg.jpg
 email: ep_chengsun@aliyun.com
 description: "个人博客 LIFE YOU LIFE"
-keyword: "孙程, 孙程同学, Genie, Genie blog, 孙程 Blog, 博客, 个人网站, 互联网, iOS, swift"
+keyword: "孙程, 孙程同学, Julian, Julian blog, 孙程 Blog, 博客, 个人网站, 互联网, iOS, swift"
 # url: "https://github.com/Gensun/Gensun.github.io.git"              # your host, for absolute URL
 url: "https://floatingraft.com"
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
